environment for pipeline stage

--- a/5/.azure-pipelines/app.cd.yml
+++ b/5/.azure-pipelines/app.cd.yml
@@ -9,9 +9,10 @@ resources:
       source: app.ci
 
 stages:
-  - stage: dev
+  - stage: prod
     jobs:
-    - deployment: dev
+    - deployment: prod
+      environment: prod
       strategy:
         runOnce:
           deploy:
