--- a/5/.azure-pipelines/app.cd.yml
+++ b/5/.azure-pipelines/app.cd.yml
@@ -18,6 +18,8 @@ stages:
           deploy:
            steps:
            - pwsh: |
+               cd ..
+               pwd
                tree
            - task: AzureRmWebAppDeployment@4
              inputs:
@@ -25,4 +27,4 @@ stages:
                azureSubscription: 'cadull-internal-consumption(9fe738f4-de59-4073-a7ac-c66fdef4fffa)'
                appType: 'webApp'
                WebAppName: 'cadulldemo4'
-               packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+               packageForLinux: '$(PIPELINE.WORKSPACE)/app.ci/binaries/**/*.zip'
