more pipeline stuff

--- a/5/.azure-pipelines/infra.cd.yml
+++ b/5/.azure-pipelines/infra.cd.yml
@@ -3,11 +3,6 @@ trigger: none
 pool:
   vmImage: ubuntu-latest
 
-resources:
-  pipelines:
-    - pipeline: ci
-      source: app.ci
-
 stages:
   - stage: prod
     jobs:
@@ -17,7 +12,7 @@ stages:
         runOnce:
           deploy:
            steps:
-           - task: AzureRmWebAppDeployment@4
+           - task: AzureCLITODO
              inputs:
                ConnectionType: 'AzureRM'
                azureSubscription: 'cadull-internal-consumption(9fe738f4-de59-4073-a7ac-c66fdef4fffa)'
