--- a/5/.azure-pipelines/infra.cd.yml
+++ b/5/.azure-pipelines/infra.cd.yml
@@ -12,6 +12,11 @@ stages:
         runOnce:
           deploy:
            steps:
+           - pwsh: |
+             cd ..
+             pwd
+             tree
+           - checkout: self
            - task: AzureCLI@2
              inputs:
                azureSubscription: 'cadull-internal-consumption(9fe738f4-de59-4073-a7ac-c66fdef4fffa)'
