--- a/5/.azure-pipelines/infra.cd.yml
+++ b/5/.azure-pipelines/infra.cd.yml
@@ -4,6 +4,23 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
+  - stage: dev
+    jobs:
+    - deployment: dev
+      environment: dev
+      strategy:
+        runOnce:
+          deploy:
+           steps:
+           - checkout: self
+           - task: AzureCLI@2
+             inputs:
+               azureSubscription: 'cadull-internal-consumption(9fe738f4-de59-4073-a7ac-c66fdef4fffa)'
+               scriptType: 'pscore'
+               scriptLocation: 'scriptPath'
+               scriptPath: '5/infra/create-infra.ps1'
+               arguments: '-namePrefix "cadulldemo5-dev"'
+
   - stage: prod
     jobs:
     - deployment: prod
@@ -12,10 +29,6 @@ stages:
         runOnce:
           deploy:
            steps:
-           - pwsh: |
-               cd ..
-               pwd
-               tree
            - checkout: self
            - task: AzureCLI@2
              inputs:
